// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header correct render should match snapshot after animation ends 1`] = `
<DocumentFragment>
  <header>
    <ul
      id="credentials"
    >
      <li>
        <p>
          Ilya「Alaie」Shafeev
        </p>
      </li>
      <li>
        <p>
          PROJECTS GALLERY
        </p>
      </li>
      <li>
        <p>
          ©2023
        </p>
      </li>
    </ul>
    <h1
      id="title"
    >
      <span>
        f
      </span>
      <span>
        r
      </span>
      <span>
        o
      </span>
      <span>
        n
      </span>
      <span>
        t
      </span>
      <span>
        e
      </span>
      <span>
        n
      </span>
      <span>
        d
      </span>
      <span>
         
      </span>
      <span>
        m
      </span>
      <span>
        e
      </span>
      <span>
        n
      </span>
      <span>
        t
      </span>
      <span>
        o
      </span>
      <span>
        r
      </span>
      <span>
        —
      </span>
      <span>
        c
      </span>
      <span>
        h
      </span>
      <span>
        a
      </span>
      <span>
        l
      </span>
      <span>
        l
      </span>
      <span>
        e
      </span>
      <span>
        n
      </span>
      <span>
        g
      </span>
      <span>
        e
      </span>
      <span>
        s
      </span>
    </h1>
    <ul
      id="description"
    >
      <li>
        <p>
          This website contains my solutions for Frontend Mentor challenges.
        </p>
      </li>
      <li>
        <p>
          All challenges made as individual web projects, so they include using of frameworks, linters,
        </p>
      </li>
      <li>
        <p>
          testing and e.t.c. to make practice building websites in a realistic workflow.
        </p>
      </li>
      <li>
        <p>
          All of these challenges help improve skills and gain experience creating websites.
        </p>
      </li>
    </ul>
    <div
      id="score"
    >
      <p>
        <span>
          15
        </span>
         — completed
      </p>
    </div>
    <div
      id="scroll"
    >
      <p>
        scroll down
      </p>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header correct render should match snapshot before animation ends 1`] = `
<DocumentFragment>
  <header>
    <ul
      id="credentials"
    >
      <li>
        <p>
          Ilya「Alaie」Shafeev
        </p>
      </li>
      <li>
        <p>
          PROJECTS GALLERY
        </p>
      </li>
      <li>
        <p>
          ©2023
        </p>
      </li>
    </ul>
    <h1
      id="title"
    >
      <span
        class="disabled"
      >
        f
      </span>
      <span
        class="disabled"
      >
        r
      </span>
      <span
        class="disabled"
      >
        o
      </span>
      <span
        class="disabled"
      >
        n
      </span>
      <span
        class="disabled"
      >
        t
      </span>
      <span
        class="disabled"
      >
        e
      </span>
      <span
        class="disabled"
      >
        n
      </span>
      <span
        class="disabled"
      >
        d
      </span>
      <span
        class="disabled"
      >
         
      </span>
      <span
        class="disabled"
      >
        m
      </span>
      <span
        class="disabled"
      >
        e
      </span>
      <span
        class="disabled"
      >
        n
      </span>
      <span
        class="disabled"
      >
        t
      </span>
      <span
        class="disabled"
      >
        o
      </span>
      <span
        class="disabled"
      >
        r
      </span>
      <span
        class="disabled"
      >
        —
      </span>
      <span
        class="disabled"
      >
        c
      </span>
      <span
        class="disabled"
      >
        h
      </span>
      <span
        class="disabled"
      >
        a
      </span>
      <span
        class="disabled"
      >
        l
      </span>
      <span
        class="disabled"
      >
        l
      </span>
      <span
        class="disabled"
      >
        e
      </span>
      <span
        class="disabled"
      >
        n
      </span>
      <span
        class="disabled"
      >
        g
      </span>
      <span
        class="disabled"
      >
        e
      </span>
      <span
        class="disabled"
      >
        s
      </span>
    </h1>
    <ul
      id="description"
    >
      <li>
        <p>
          This website contains my solutions for Frontend Mentor challenges.
        </p>
      </li>
      <li>
        <p>
          All challenges made as individual web projects, so they include using of frameworks, linters,
        </p>
      </li>
      <li>
        <p>
          testing and e.t.c. to make practice building websites in a realistic workflow.
        </p>
      </li>
      <li>
        <p>
          All of these challenges help improve skills and gain experience creating websites.
        </p>
      </li>
    </ul>
    <div
      id="score"
    >
      <p>
        <span>
          0
        </span>
         — completed
      </p>
    </div>
    <div
      id="scroll"
    >
      <p>
        scroll down
      </p>
    </div>
  </header>
</DocumentFragment>
`;
